Closed Bug 136746 Opened 22 years ago Closed 22 years ago

Trunk M1RC1 N622 users crashing using quicktime [@ nsBlockFrame::ReflowBlockFrame]

Categories

(Core :: Layout, defect, P2)

x86
Windows XP
defect

Tracking

()

VERIFIED FIXED
mozilla1.0

People

(Reporter: greer, Assigned: karnaze)

Details

(Keywords: crash, topcrash, Whiteboard: [adt2]BLIND PATCH)

Crash Data

Attachments

(2 files, 2 obsolete files)

Most users reporting crashes at the nsBlockFrame::ReflowBlockFrame signature are
commenting on some use of the quicktime plugin.

The stacks look different from bug 134437 and the comments point to a different
issue. But dupe this if I'm wrong.

Stack and comments:

         nsBlockFrame::ReflowBlockFrame
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsBlockFrame.cpp  line 3140]
         nsBlockFrame::ReflowLine      
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsBlockFrame.cpp  line 2508]
         nsBlockFrame::ReflowDirtyLines
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsBlockFrame.cpp  line 2281]
         nsBlockFrame::Reflow  
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsBlockFrame.cpp  line 846]
         nsBlockReflowContext::DoReflowBlock   
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsBlockReflowContext.cp
p  line 581]
         nsBlockReflowContext::ReflowBlock     
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsBlockReflowContext.cp
p  line 359]
         nsBlockFrame::ReflowBlockFrame
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsBlockFrame.cpp  line 3232]
         nsBlockFrame::ReflowLine      
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsBlockFrame.cpp  line 2508]
         nsBlockFrame::ReflowDirtyLines
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsBlockFrame.cpp  line 2281]
         nsBlockFrame::Reflow  
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsBlockFrame.cpp  line 846]
         nsBlockReflowContext::DoReflowBlock   
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsBlockReflowContext.cp
p  line 581]
         nsBlockReflowContext::ReflowBlock     
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsBlockReflowContext.cp
p  line 359]
         nsBlockFrame::ReflowBlockFrame
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsBlockFrame.cpp  line 3232]
         nsBlockFrame::ReflowLine      
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsBlockFrame.cpp  line 2508]
         nsBlockFrame::ReflowDirtyLines
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsBlockFrame.cpp  line 2281]
         nsBlockFrame::Reflow  
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsBlockFrame.cpp  line 846]
         nsContainerFrame::ReflowChild 
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsContainerFrame.cpp  line 805]
         CanvasFrame::Reflow   
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsHTMLFrame.cpp  line 564]
         nsBoxToBlockAdaptor::Reflow   
[d:\builds\seamonkey\mozilla\layout\xul\base\src\nsBoxToBlockAdaptor.cpp  line 84
5]
         nsBoxToBlockAdaptor::DoLayout 
[d:\builds\seamonkey\mozilla\layout\xul\base\src\nsBoxToBlockAdaptor.cpp  line 62
2]
         nsBox::Layout 
[d:\builds\seamonkey\mozilla\layout\xul\base\src\nsBox.cpp  line 1052]
         nsScrollBoxFrame::DoLayout    
[d:\builds\seamonkey\mozilla\layout\xul\base\src\nsScrollBoxFrame.cpp  line 395]
         nsBox::Layout 
[d:\builds\seamonkey\mozilla\layout\xul\base\src\nsBox.cpp  line 1052]
         nsContainerBox::LayoutChildAt 
[d:\builds\seamonkey\mozilla\layout\xul\base\src\nsContainerBox.cpp  line 650]
         nsGfxScrollFrameInner::LayoutBox      
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsGfxScrollFrame.cpp  l
ine 1062]
         nsGfxScrollFrameInner::Layout 
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsGfxScrollFrame.cpp  line 1221
]
         nsGfxScrollFrame::DoLayout    
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsGfxScrollFrame.cpp  line 1070
]
         nsBox::Layout 
[d:\builds\seamonkey\mozilla\layout\xul\base\src\nsBox.cpp  line 1052]
         nsBoxFrame::Reflow    
[d:\builds\seamonkey\mozilla\layout\xul\base\src\nsBoxFrame.cpp  line 1000]
         nsGfxScrollFrame::Reflow      
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsGfxScrollFrame.cpp  line 779]
         nsContainerFrame::ReflowChild 
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsContainerFrame.cpp  line 805]
         ViewportFrame::Reflow 
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsViewportFrame.cpp  line 574]
         nsHTMLReflowCommand::Dispatch 
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsHTMLReflowCommand.cpp  line 2
17]
         PresShell::ProcessReflowCommand       
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsPresShell.cpp  line 6
204]
         PresShell::ProcessReflowCommands      
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsPresShell.cpp  line 6
259]
        PresShell::FlushPendingNotifications  
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsPresShell.cpp  line 5
041]
         nsDocument::FlushPendingNotifications 
[d:\builds\seamonkey\mozilla\content\base\src\nsDocument.cpp  line 3418]
         nsHTMLDocument::FlushPendingNotifications     
[d:\builds\seamonkey\mozilla\content\html\document\src\nsHTMLDocu
ment.cpp  line 1493]
         nsDOMWindowList::GetLength    
[d:\builds\seamonkey\mozilla\dom\src\base\nsDOMWindowList.cpp  line 103]
         GlobalWindowImpl::GetLength   
[d:\builds\seamonkey\mozilla\dom\src\base\nsGlobalWindow.cpp  line 1699]
         XPTC_InvokeByIndex    
[d:\builds\seamonkey\mozilla\xpcom\reflect\xptcall\src\md\win32\xptcinvoke.cpp 
line 106]
         XPCWrappedNative::CallMethod  
[d:\builds\seamonkey\mozilla\js\src\xpconnect\src\xpcwrappednative.cpp  line 2027
]
         XPC_WN_GetterSetter   
[d:\builds\seamonkey\mozilla\js\src\xpconnect\src\xpcwrappednativejsops.cpp 
line 1299]
         js_Invoke      [d:\builds\seamonkey\mozilla\js\src\jsinterp.c  line 790]
         js_InternalInvoke      [d:\builds\seamonkey\mozilla\js\src\jsinterp.c 
line 881]
         js_GetProperty [d:\builds\seamonkey\mozilla\js\src\jsobj.c  line 2494]
         js_Interpret   [d:\builds\seamonkey\mozilla\js\src\jsinterp.c  line 2578]
         js_Invoke      [d:\builds\seamonkey\mozilla\js\src\jsinterp.c  line 806]
         nsXPCWrappedJSClass::CallMethod       
[d:\builds\seamonkey\mozilla\js\src\xpconnect\src\xpcwrappedjsclass.cpp
line 1195]
         nsXPCWrappedJS::CallMethod    
[d:\builds\seamonkey\mozilla\js\src\xpconnect\src\xpcwrappedjs.cpp  line 430]
         PrepareAndDispatch    
[d:\builds\seamonkey\mozilla\xpcom\reflect\xptcall\src\md\win32\xptcstubs.cpp 
line 117]
         SharedStub    
[d:\builds\seamonkey\mozilla\xpcom\reflect\xptcall\src\md\win32\xptcstubs.cpp 
line 139]
         nsEventListenerManager::HandleEventSubType    
[d:\builds\seamonkey\mozilla\content\events\src\nsEventListenerMa
nager.cpp  line 1218]
         nsEventListenerManager::HandleEvent   
[d:\builds\seamonkey\mozilla\content\events\src\nsEventListenerManager.cp
p  line 1737]
         nsXULElement::HandleDOMEvent  
[d:\builds\seamonkey\mozilla\content\xul\content\src\nsXULElement.cpp  line 3457]
         nsXULElement::HandleDOMEvent  
[d:\builds\seamonkey\mozilla\content\xul\content\src\nsXULElement.cpp  line 3438]
         nsXULElement::HandleDOMEvent  
[d:\builds\seamonkey\mozilla\content\xul\content\src\nsXULElement.cpp  line 3438]
         nsXULElement::HandleDOMEvent  
[d:\builds\seamonkey\mozilla\content\xul\content\src\nsXULElement.cpp  line 3438]
         nsXULElement::HandleDOMEvent  
[d:\builds\seamonkey\mozilla\content\xul\content\src\nsXULElement.cpp  line 3438]
         nsXULElement::HandleDOMEvent  
[d:\builds\seamonkey\mozilla\content\xul\content\src\nsXULElement.cpp  line 3438]
         nsXULElement::HandleChromeEvent       
[d:\builds\seamonkey\mozilla\content\xul\content\src\nsXULElement.cpp  li
ne 4680]
         GlobalWindowImpl::HandleDOMEvent      
[d:\builds\seamonkey\mozilla\dom\src\base\nsGlobalWindow.cpp  line 687]
         nsDocument::HandleDOMEvent    
[d:\builds\seamonkey\mozilla\content\base\src\nsDocument.cpp  line 3228]
         nsEventStateManager::PreHandleEvent   
[d:\builds\seamonkey\mozilla\content\events\src\nsEventStateManager.cpp
line 472]
         PresShell::HandleEventInternal
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsPresShell.cpp  line 5999]
         PresShell::HandleEvent
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsPresShell.cpp  line 5927]
         nsViewManager::HandleEvent    
[d:\builds\seamonkey\mozilla\view\src\nsViewManager.cpp  line 2043]
         nsView::HandleEvent    [d:\builds\seamonkey\mozilla\view\src\nsView.cpp
 line 306]
         nsViewManager::DispatchEvent  
[d:\builds\seamonkey\mozilla\view\src\nsViewManager.cpp  line 1863]
         HandleEvent    [d:\builds\seamonkey\mozilla\view\src\nsView.cpp  line 83]
 
        Source File :
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/layout/html/base/src/nsBlockFrame.cpp
line : 31
40
 
Trunk (nsBlockFrame::ReflowBlockFrame):        8
 Unique Users  8
(4752115) - testing bug... Windows NT  5.0 build 2195
(4890347) - attempted to download quicktime audio plugin    Windows NT  5.0
build 2195
(4942589) - Viewing OSX quicktime movies  clicked on several in a row  Mozilla
or Quicktime crashed URL: apple.com  Windows NT  5.0 build 2195

M099 (nsBlockFrame::ReflowBlockFrame):       33
 Unique Users  29
(4654357) - Reloading the page after an ISP connection loss URL:
www.the-underdogs.org/faq.php   Windows 98  4.10 build 67766222
(4784733) - viewing quicktime movie  Windows NT  5.0 build 2195
(4809429) - Trying to play a movie with Quicktime plug-in. Windows NT  5.0 build
2195
(4829811) - quicktime    Windows NT  5.1 build 2600
(4830258) - quicktime    Windows NT  5.1 build 2600
(4830384) - quicktime    Windows NT  5.1 build 2600
(4830829) - minimizing mozilla while it was looking for the website URL:
www.quicktime.com   Windows NT  5.0 build
2195
(4861365) - Trying to see the page. The latest QuickTime plugin was installed.
URL: http://www.apple.com/hardware/ads/imac_window.html  Windows NT  5.0 build 2195
(4876465) - I was watching a trailer at apple.com/quicktime (the blade 2 trailer
 I know  I'm sorry)I have the quicktime
plugin installed   Windows NT  5.1 build 2600
(4886598) - quicktime vr URL: apple.com   Windows NT  5.0 build 2195

 
N622 (nsBlockFrame::ReflowBlockFrame):       27
 Unique Users  25
(4781922) - Attempting to open and download a QuickTime movie (*.mov) URL:
www.apple.com  Windows 98  4.90 build 73010104
(4782140) - Attempting to open and download a QuickTime movie (*.mov) URL:
www.apple.com  Windows 98  4.90 build 73010104
(4802910) - viewing movie trailer URL: www.apple.com/quicktime/movietrailers  
Windows 98  4.90 build 73010104
(4854810) - Starting to download a trailer from www.apple.com/trailer 
xwing005@hotmail.com Windows 98  4.90 build 73010104
(4857723) - Surfed to Apple-site URL: www.apple.com  Windows NT  4.0 build 1381
(4863747) - The beowser crashed while returning the the page (url above) and was
closed ny the NQFA. URL: http://www.apple.com/trailers   Windows NT  5.1 build 2600
(4890143) - Trying to view some trailers URL: www.apple.com/quicktime   Windows
98  4.90 build 73010104
-> crash, topcrash  and while we don't have a testcase -> qawanted
Keywords: crash, qawanted, topcrash
I can confirm the bug with
Mozilla/5.0 (Windows; U; Win98; de-AT; rv:0.9.9+) Gecko/20020410
Please see also TB5073670G (stack etc.)

Mostly crashes when stopping Qicktime or closing TAB/WINDOW
Changing QA contact
QA Contact: petersen → amar
Priority: -- → P2
How do I see a stack trace from TB5073670G?
nsbeta1+.
Keywords: nsbeta1+
Whiteboard: [adt2]
Target Milestone: --- → mozilla1.0
taking the bug.
Assignee: attinasi → karnaze
karnaze, here's the stack you wanted.

To get a stack (inside the firewall):
1) Go to climate.mcom.com
2) Enter the Talkback ID (numbers only!) in the incident ID form

Incident ID 5073670
 Stack Signature      QUICKTIME.QTS + 0x1305eb (0x629305eb) 47b0ec62
 Product ID           MozillaTrunk
 Build ID             2002041006
 Platform             Win32
 Operating System     Windows 98 4.10 build 67766446
 Module               QUICKTIME.QTS
 URL visited          stopped Qicktime with STOP-Key
 Trigger Reason       Access violation

 Stack Trace

QUICKTIME.QTS + 0x1305eb (0x629305eb) 
I did that but still didn't see a source stack (only registers, etc).
karnaze: your particular crash just didn't report back a stack trace...that
happens with certain crashes for some reason.  it looks like bug 102587...so it
might be worth a look to see if it's related to this one.
Updating summary M099 -> M1RC1.  This is a topcrasher with Mozilla1.0 RC1:

nsBlockFrame::ReflowBlockFrame   17
		 136746 	 NEW 	  	 attinasi@netscape.com 	 --- 	 Thu 17:53 
BBID range: 5389811 - 5502568
Min/Max Seconds since last crash: 8 - 77427
Min/Max Runtime: 136 - 80756
Crash data range: 2002-04-19 to 2002-04-22
Build ID range: 2002041717 to 2002041717
Keyword List : 
Stack Trace: 

	 nsBlockFrame::ReflowBlockFrame
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsBlockFrame.cpp  line 3102]
	 nsBlockFrame::ReflowLine
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsBlockFrame.cpp  line 2466]
	 nsBlockFrame::ReflowDirtyLines
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsBlockFrame.cpp  line 2239]
	 nsBlockFrame::Reflow
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsBlockFrame.cpp  line 846]
	 nsBlockReflowContext::DoReflowBlock
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsBlockReflowContext.cpp  line
581]
	 nsBlockReflowContext::ReflowBlock
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsBlockReflowContext.cpp  line
359]
	 nsBlockFrame::ReflowBlockFrame
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsBlockFrame.cpp  line 3194]
	 nsBlockFrame::ReflowLine
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsBlockFrame.cpp  line 2466]
	 nsBlockFrame::ReflowDirtyLines
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsBlockFrame.cpp  line 2239]
	 nsBlockFrame::Reflow
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsBlockFrame.cpp  line 846]
	 nsContainerFrame::ReflowChild
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsContainerFrame.cpp  line 807]
	 CanvasFrame::Reflow
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsHTMLFrame.cpp  line 565]
	 nsBoxToBlockAdaptor::Reflow
[d:\builds\seamonkey\mozilla\layout\xul\base\src\nsBoxToBlockAdaptor.cpp  line 837]
	 nsBoxToBlockAdaptor::DoLayout
[d:\builds\seamonkey\mozilla\layout\xul\base\src\nsBoxToBlockAdaptor.cpp  line 619]
	 nsBox::Layout
[d:\builds\seamonkey\mozilla\layout\xul\base\src\nsBox.cpp  line 1052]
	 nsScrollBoxFrame::DoLayout
[d:\builds\seamonkey\mozilla\layout\xul\base\src\nsScrollBoxFrame.cpp  line 395]
	 nsBox::Layout
[d:\builds\seamonkey\mozilla\layout\xul\base\src\nsBox.cpp  line 1052]
	 nsContainerBox::LayoutChildAt
[d:\builds\seamonkey\mozilla\layout\xul\base\src\nsContainerBox.cpp  line 650]
	 nsGfxScrollFrameInner::LayoutBox
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsGfxScrollFrame.cpp  line 1063]
	 nsGfxScrollFrameInner::Layout
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsGfxScrollFrame.cpp  line 1222]
	 nsGfxScrollFrame::DoLayout
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsGfxScrollFrame.cpp  line 1071]
	 nsBox::Layout
[d:\builds\seamonkey\mozilla\layout\xul\base\src\nsBox.cpp  line 1052]
	 nsBoxFrame::Reflow
[d:\builds\seamonkey\mozilla\layout\xul\base\src\nsBoxFrame.cpp  line 1001]
	 nsGfxScrollFrame::Reflow
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsGfxScrollFrame.cpp  line 780]
	 nsContainerFrame::ReflowChild
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsContainerFrame.cpp  line 807]
	 ViewportFrame::Reflow
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsViewportFrame.cpp  line 588]
	 nsHTMLReflowCommand::Dispatch
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsHTMLReflowCommand.cpp  line 218]
	 PresShell::ProcessReflowCommand
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsPresShell.cpp  line 6296]
	 PresShell::ProcessReflowCommands
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsPresShell.cpp  line 6351]
	 PresShell::FlushPendingNotifications
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsPresShell.cpp  line 5065]
	 nsDocument::FlushPendingNotifications
[d:\builds\seamonkey\mozilla\content\base\src\nsDocument.cpp  line 3420]
	 nsHTMLDocument::FlushPendingNotifications
[d:\builds\seamonkey\mozilla\content\html\document\src\nsHTMLDocument.cpp  line
1494]
	 nsDOMWindowList::GetLength
[d:\builds\seamonkey\mozilla\dom\src\base\nsDOMWindowList.cpp  line 103]
	 GlobalWindowImpl::GetLength
[d:\builds\seamonkey\mozilla\dom\src\base\nsGlobalWindow.cpp  line 1822]
	 XPTC_InvokeByIndex
[d:\builds\seamonkey\mozilla\xpcom\reflect\xptcall\src\md\win32\xptcinvoke.cpp 
line 106]
	 XPCWrappedNative::CallMethod
[d:\builds\seamonkey\mozilla\js\src\xpconnect\src\xpcwrappednative.cpp  line 2027]
	 XPC_WN_GetterSetter
[d:\builds\seamonkey\mozilla\js\src\xpconnect\src\xpcwrappednativejsops.cpp 
line 1299]
	 js_Invoke
[d:\builds\seamonkey\mozilla\js\src\jsinterp.c  line 790]
	 js_InternalInvoke
[d:\builds\seamonkey\mozilla\js\src\jsinterp.c  line 881]
	 js_GetProperty
[d:\builds\seamonkey\mozilla\js\src\jsobj.c  line 2503]
	 js_Interpret
[d:\builds\seamonkey\mozilla\js\src\jsinterp.c  line 2578]
	 js_Invoke
[d:\builds\seamonkey\mozilla\js\src\jsinterp.c  line 806]
	 nsXPCWrappedJSClass::CallMethod
[d:\builds\seamonkey\mozilla\js\src\xpconnect\src\xpcwrappedjsclass.cpp  line 1195]
	 nsXPCWrappedJS::CallMethod
[d:\builds\seamonkey\mozilla\js\src\xpconnect\src\xpcwrappedjs.cpp  line 430]
	 PrepareAndDispatch
[d:\builds\seamonkey\mozilla\xpcom\reflect\xptcall\src\md\win32\xptcstubs.cpp 
line 117]
	 SharedStub
[d:\builds\seamonkey\mozilla\xpcom\reflect\xptcall\src\md\win32\xptcstubs.cpp 
line 139]
	 nsEventListenerManager::HandleEventSubType
[d:\builds\seamonkey\mozilla\content\events\src\nsEventListenerManager.cpp  line
1218]
	 nsEventListenerManager::HandleEvent
[d:\builds\seamonkey\mozilla\content\events\src\nsEventListenerManager.cpp  line
1737]
	 nsXULElement::HandleDOMEvent
[d:\builds\seamonkey\mozilla\content\xul\content\src\nsXULElement.cpp  line 3461]
	 nsXULElement::HandleDOMEvent
[d:\builds\seamonkey\mozilla\content\xul\content\src\nsXULElement.cpp  line 3442]
	 nsXULElement::HandleDOMEvent
[d:\builds\seamonkey\mozilla\content\xul\content\src\nsXULElement.cpp  line 3442]
	 nsXULElement::HandleDOMEvent
[d:\builds\seamonkey\mozilla\content\xul\content\src\nsXULElement.cpp  line 3442]
	 nsXULElement::HandleDOMEvent
[d:\builds\seamonkey\mozilla\content\xul\content\src\nsXULElement.cpp  line 3442]
	 nsXULElement::HandleDOMEvent
[d:\builds\seamonkey\mozilla\content\xul\content\src\nsXULElement.cpp  line 3442]
	 nsXULElement::HandleChromeEvent
[d:\builds\seamonkey\mozilla\content\xul\content\src\nsXULElement.cpp  line 4690]
	 GlobalWindowImpl::HandleDOMEvent
[d:\builds\seamonkey\mozilla\dom\src\base\nsGlobalWindow.cpp  line 737]
	 nsDocument::HandleDOMEvent
[d:\builds\seamonkey\mozilla\content\base\src\nsDocument.cpp  line 3230]
	 nsEventStateManager::PreHandleEvent
[d:\builds\seamonkey\mozilla\content\events\src\nsEventStateManager.cpp  line 492]
	 PresShell::HandleEventInternal
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsPresShell.cpp  line 6091]
	 PresShell::HandleEvent
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsPresShell.cpp  line 6019]
	 nsViewManager::HandleEvent
[d:\builds\seamonkey\mozilla\view\src\nsViewManager.cpp  line 2076]
	 nsView::HandleEvent
[d:\builds\seamonkey\mozilla\view\src\nsView.cpp  line 306]
	 nsViewManager::DispatchEvent
[d:\builds\seamonkey\mozilla\view\src\nsViewManager.cpp  line 1887]
	 HandleEvent
[d:\builds\seamonkey\mozilla\view\src\nsView.cpp  line 83]
 
 	Source File :
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/layout/html/base/src/nsBlockFrame.cpp
line : 3102
     (5438567)	URL: http://www.apple.com/trailers
     (5438567)	Comments: Watching movie trailers. First one displayd ok but second one
caused Mozilla to crash.
     (5416146)	URL: apple.com/trailers
     (5416146)	Comments: clicked on link
Summary: Trunk M099 N622 users crashing using quicktime [@ nsBlockFrame::ReflowBlockFrame] → Trunk M1RC1 N622 users crashing using quicktime [@ nsBlockFrame::ReflowBlockFrame]
I meant to attach this this morning. This is a breakdown of all crashes that
included comments from the last three releases and Trunk. I tried for a while
this morning to reproduce it with a week old Trunk build (installing quicktime
and going to quicktime material on www.apple.com/trailers and ~/quicktime) with
no luck.
Attached patch patch to check for an empty line (obsolete) — Splinter Review
Based on the stack traces I've seen and the various versions of
nsBlockFrame.cpp that I have looked at trying to match line numbers, there is a
reasonable chance that the problem is due to dereferencing a null pointer
because a line is empty and we assume that it isn't. This patch has 0 risk.
Attached patch revised patch (obsolete) — Splinter Review
Attachment #80868 - Attachment is obsolete: true
Status: NEW → ASSIGNED
Whiteboard: [adt2] → [adt2]BLIND PATCH
Nice detective work. Wish we could reproduce this in-house and debug it for
real, though.

For future generations, could you not use the macro and just put the code
in-line instead? That way someone can set a breakpoint on the `return' statement
when trying to track down the real problem.
Comment on attachment 80870 [details] [diff] [review]
revised patch

r= alexsavulov

(on the next revision that does not make us of ABORT_IF_NULL as we spoke)
Attachment #80870 - Flags: review+
Attachment #80870 - Attachment is obsolete: true
Attachment #81037 - Flags: superreview+
Attachment #81037 - Flags: review+
The patch is in. I hope this actually fixed something.
Keywords: adt1.0.0, approval
Comment on attachment 80870 [details] [diff] [review]
revised patch

sr=attinasi, macro or no macro, it's wallpaper either way :)
Attachment #80870 - Flags: superreview+
Was this checked into the MozillaTrunk only?  If it's a problem with
Mozilla1.0RC1, are we going to patch up the Mozilla1.0 branch too?

I'll keep an eye out for any more crashes from Talkback.  Since no one has been
able to reproduce this at will, we'll have to use Talkback data to verify this fix.
It was checked into the trunk and will be checked into the m1.0 branch if the 
appropriate approvals are given.
Comment on attachment 81037 [details] [diff] [review]
revised patch with reviewer's suggestions

a=asa (on behalf of drivers) for checkin to the 1.0 branch
Attachment #81037 - Flags: approval+
adt1.0.0+ (on ADT's behalf) approval for checkin to the 1.0 branch. Pls check
this in tonight, if you are still awake, and online. thanks!
Keywords: adt1.0.0adt1.0.0+
The pathc is in the m1.0 branch. Marking fixed although it is going to be hard 
to determine that.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Keywords: fixed1.0.0
Resolution: --- → FIXED
Keywords: verified1.0.0
Marking this verified fixed.  This crash last showed up in Mozilla 1.0 RC1...I
haven't seen any crashes in any Talkback data for the Trunk or RC2 and RC3.
Status: RESOLVED → VERIFIED
Crash Signature: [@ nsBlockFrame::ReflowBlockFrame]
Keywords: qawanted
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: