bug 136746 - check for null pointer if a line is empty. sr=waterson, r=alexsavulov